# webrtc-hub-uv-sample

./: README.md
client/: .gitignore  README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AnomalyAlert.tsx  HealthScore.tsx  MetricsChart.tsx  PeripheralCards.tsx  PredictionHeatmap.tsx  StatusInsightCard.tsx
client/src/hooks/: useWebRTC.ts
client/src/pages/: Dashboard.tsx
doc/: AnomalyDetection.md  Architecture.md  PRD.md  PulseAIBackend.md
server/: .gitignore  README.md  pyproject.toml
server/webrtc_hub/: detector.py  sample_loader.py  server.py
webrtc_csharp_client/: .gitignore  Program.cs  README.md  WeHubClient.csproj
